[gd_scene load_steps=44 format=3 uid="uid://bnmrqlcon1iha"]

[ext_resource type="Script" path="res://enemy/CAC/riotman.gd" id="1_r0p4n"]
[ext_resource type="Texture2D" uid="uid://cpbfgsthfn6tx" path="res://Assets/Foe/riotman/shieldman_attack.png" id="1_vkffm"]
[ext_resource type="Texture2D" uid="uid://bjvda2bwghagw" path="res://Assets/Foe/riotman/shieldman_death.png" id="2_scd5i"]
[ext_resource type="Texture2D" uid="uid://cqaxgh3cdepm4" path="res://Assets/Foe/riotman/shieldman_walk.png" id="3_dg60w"]
[ext_resource type="Texture2D" uid="uid://n2gxgjfrgi3j" path="res://Assets/Foe/riotman/shieldman_tank.png" id="4_0ipm4"]
[ext_resource type="Script" path="res://Scripts/Components/hurt_component.gd" id="5_760fy"]
[ext_resource type="Script" path="res://Scripts/Components/ennemies_stats_component.gd" id="6_nu5oj"]
[ext_resource type="Script" path="res://Scripts/Components/destroyed_component.gd" id="7_w6k2p"]
[ext_resource type="Script" path="res://Scripts/Components/stats_component.gd" id="8_353lc"]
[ext_resource type="Script" path="res://Scripts/Components/hurtbox_component.gd" id="9_2re8q"]
[ext_resource type="Script" path="res://Scripts/Components/spawn_component.gd" id="10_suepq"]
[ext_resource type="PackedScene" uid="uid://c44phjt3qn2wl" path="res://experience/experience.tscn" id="11_n7cko"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8wskj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0ajhk"]
atlas = ExtResource("1_vkffm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tab4w"]
atlas = ExtResource("1_vkffm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr6j0"]
atlas = ExtResource("1_vkffm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_63y3x"]
atlas = ExtResource("1_vkffm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcomn"]
atlas = ExtResource("1_vkffm")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2boo"]
atlas = ExtResource("1_vkffm")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yth21"]
atlas = ExtResource("1_vkffm")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_beout"]
atlas = ExtResource("2_scd5i")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hug21"]
atlas = ExtResource("2_scd5i")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tje6w"]
atlas = ExtResource("2_scd5i")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0d7f"]
atlas = ExtResource("2_scd5i")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfs57"]
atlas = ExtResource("2_scd5i")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0qc4"]
atlas = ExtResource("2_scd5i")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_el3rl"]
atlas = ExtResource("2_scd5i")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrvxs"]
atlas = ExtResource("2_scd5i")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrpjb"]
atlas = ExtResource("3_dg60w")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndhb2"]
atlas = ExtResource("3_dg60w")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sxhi"]
atlas = ExtResource("3_dg60w")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_boxnt"]
atlas = ExtResource("3_dg60w")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_quw46"]
atlas = ExtResource("3_dg60w")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjb1i"]
atlas = ExtResource("3_dg60w")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5fyx"]
atlas = ExtResource("4_0ipm4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7ije"]
atlas = ExtResource("4_0ipm4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8chgy"]
atlas = ExtResource("4_0ipm4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1kfp"]
atlas = ExtResource("4_0ipm4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxpkn"]
atlas = ExtResource("4_0ipm4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h388a"]
atlas = ExtResource("4_0ipm4")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3eb8t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ajhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tab4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr6j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63y3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcomn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2boo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yth21")
}],
"loop": true,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_beout")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hug21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tje6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0d7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfs57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0qc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el3rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrvxs")
}],
"loop": true,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrpjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndhb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sxhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boxnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quw46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjb1i")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5fyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7ije")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8chgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1kfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxpkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h388a")
}],
"loop": true,
"name": &"tank",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dg4rr"]
radius = 11.0
height = 44.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qstt1"]
height = 32.0

[node name="riotman" type="CharacterBody2D" node_paths=PackedStringArray("stats")]
collision_mask = 2
script = ExtResource("1_r0p4n")
stats = NodePath("EnnemiesStatsComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_8wskj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_3eb8t")
animation = &"move"

[node name="range" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
position = Vector2(3, 0)
shape = SubResource("CapsuleShape2D_dg4rr")

[node name="Timer" type="Timer" parent="."]

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("5_760fy")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="EnnemiesStatsComponent" type="Node" parent="."]
script = ExtResource("6_nu5oj")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("7_w6k2p")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../SpawnComponent")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("8_353lc")
health = 10

[node name="HurtboxComponent" type="Area2D" parent="."]
script = ExtResource("9_2re8q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_qstt1")

[node name="SpawnComponent" type="Node2D" parent="."]
script = ExtResource("10_suepq")
scene = ExtResource("11_n7cko")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
